--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -80,7 +83,7 @@
       <section id="section1" class="row mb-5">
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
           <img
-            src="feelingjuicy-01.png"
+            src="feelingjuicy-01.webp"
             class="section1billede img-fluid"
             alt="billede"
             style="width: 60%"
@@ -99,7 +102,7 @@
         >
           <h2>
             Fresh fruit, great juice
-            <img src="stjerner.png" alt="" />
+            <img src="stjerner.webp" alt="" />
           </h2>
 
           <p>
@@ -116,7 +119,7 @@
       <section id="section2-web" class="row fluid-continer">
         <div class="col-sm-4 p-0 container_hover">
           <img
-            src="OrangeJuice.png"
+            src="OrangeJuice.webp"
             class="img-fluid image_hover"
             alt="juice"
           />
@@ -129,7 +132,11 @@
           </div>
         </div>
         <div class="col-sm-4 p-0 container_hover">
-          <img src="KiwiLimeee.png" class="img-fluid image_hover" alt="juice" />
+          <img
+            src="KiwiLimeee.webp"
+            class="img-fluid image_hover"
+            alt="juice"
+          />
           <div class="overlay">
             <div class="text">
               <h3>The greenie</h3>
@@ -139,7 +146,7 @@
         </div>
         <div class="col-sm-4 p-0 container_hover">
           <img
-            src="MangoPassionsfruit.png"
+            src="MangoPassionsfruit.webp"
             class="img-fluid image_hover"
             alt="juice"
           />
@@ -152,7 +159,7 @@
         </div>
         <div class="col-sm-4 p-0 container_hover d-none d-sm-block">
           <img
-            src="AppleRaspberry.png"
+            src="AppleRaspberry.webp"
             class="img-fluid image_hover"
             alt="juice"
           />
@@ -165,7 +172,7 @@
         </div>
         <div class="col-sm-4 p-0 container_hover d-none d-sm-block">
           <img
-            src="PineappleCoconut.png"
+            src="PineappleCoconut.webp"
             class="img-fluid image_hover"
             alt="juice"
           />
@@ -178,7 +185,7 @@
         </div>
         <div class="col-sm-4 p-0 container_hover d-none d-sm-block">
           <img
-            src="StrawberryPomegranate.png"
+            src="StrawberryPomegranate.webp"
             class="img-fluid image_hover"
             alt="juice"
           />
@@ -205,7 +212,7 @@
             </h5>
             <img
               class="img-fluid section_frugt"
-              src="frugterendelig.png"
+              src="frugterendelig.webp"
               alt=""
               style="width: 300px"
             />
@@ -215,7 +222,7 @@
             class="d-none d-lg-block col-lg-3 align-self-lg-center tekst_frugt"
           >
             <img
-              src="tekstfrugt.png"
+              src="tekstfrugt.webp"
               style="width: 24vw; height: auto"
               alt=""
             />
@@ -227,7 +234,7 @@
             class="d-none d-lg-block col-lg-3 align-self-lg-center tekst_vand"
           >
             <img
-              src="tekstfrugt2.png"
+              src="tekstfrugt2.webp"
               style="width: 22vw; height: auto"
               alt=""
             />
@@ -235,26 +242,31 @@
 
           <div class="col-12 mb-4 col-sm-12 col-lg-6 mb-lg-0 pt-5 text-center">
             <h5 class="d-lg-none"><b class="fedtekst">02.</b> Natrual water</h5>
-            <img class="img-fluid" src="vand.png" alt="" style="width: 390px" />
+            <img
+              class="img-fluid"
+              src="vand.webp"
+              alt=""
+              style="width: 390px"
+            />
           </div>
         </div>
       </section>
 
       <section id="section4" class="row text-center">
         <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="appelsin4.png" alt="" />
+          <img class="img-fluid" src="appelsin4.webp" alt="" />
           <h6>All natrual</h6>
         </div>
         <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <img class="img-fluid" src="appelsin3.png" alt="" />
+          <img class="img-fluid" src="appelsin3.webp" alt="" />
           <h6>Real juice</h6>
         </div>
         <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="appelsin1.png" alt="" />
+          <img class="img-fluid" src="appelsin1.webp" alt="" />
           <h6>Low sugar</h6>
         </div>
         <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <img class="img-fluid" src="appelsin2.png" alt="" />
+          <img class="img-fluid" src="appelsin2.webp" alt="" />
           <h6>Low calorie</h6>
         </div>
         <div class="col-12 d-flex justify-content-center">
@@ -264,22 +276,22 @@
 
       <section id="section4_web" class="row text-center align-items-center">
         <div class="col-2">
-          <img class="img-fluid" src="appelsin4.png" alt="" />
+          <img class="img-fluid" src="appelsin4.webp" alt="" />
           <h6>All natrual</h6>
         </div>
         <div class="col-2">
-          <img class="img-fluid" src="appelsin3.png" alt="" />
+          <img class="img-fluid" src="appelsin3.webp" alt="" />
           <h6>Real juice</h6>
         </div>
         <div class="col-4">
           <button type="button" class="btn btn-outline-primary">shop</button>
         </div>
         <div class="col-2">
-          <img class="img-fluid" src="appelsin1.png" alt="" />
+          <img class="img-fluid" src="appelsin1.webp" alt="" />
           <h6>Low sugar</h6>
         </div>
         <div class="col-2">
-          <img class="img-fluid" src="appelsin2.png" alt="" />
+          <img class="img-fluid" src="appelsin2.webp" alt="" />
           <h6>Low calorie</h6>
         </div>
       </section>
@@ -290,12 +302,12 @@
       >
         <div class="streg d-none d-lg-block"></div>
         <div class="rrr col-12 col-sm-6 col-lg-6 mb-lg-0 p-0 d-grid">
-          <img class="img-fluid" src="billede_section4.png" alt="" />
+          <img class="img-fluid" src="billede_section4.webp" alt="" />
           <p>FROM BREAKFAST</p>
         </div>
 
         <div class="rrr col-12 col-sm-6 col-lg-6 mb-lg-0 p-0 d-grid">
-          <img class="img-fluid" src="billede_section4_2.png" alt="" />
+          <img class="img-fluid" src="billede_section4_2.webp" alt="" />
           <p>TO COCKTAILS</p>
         </div>
       </section>
@@ -344,7 +356,7 @@
 
         <div class="col-12 pb-5 text-center">
           <h5>
-            <i>enjoy</i> <img class="stjerner" src="stjerner.png" alt="" />
+            <i>enjoy</i> <img class="stjerner" src="stjerner.webp" alt="" />
           </h5>
           <p class="share">
             <i
@@ -361,20 +373,20 @@
       >
         <div class="row1">
           <div class="col-lg-2 ms-3 me-3">
-            <img class="img-fluid" src="SoMe1.png" alt="juice" />
+            <img class="img-fluid" src="SoMe1.webp" alt="juice" />
           </div>
           <div class="col-lg-1 me-3 d-none d-lg-block">
-            <img class="img-fluid" src="SoMe3.png" alt="juice" />
+            <img class="img-fluid" src="SoMe3.webp" alt="juice" />
           </div>
 
           <div class="col-lg-3 me-3">
-            <img class="img-fluid" src="SoMe2.png" alt="juice" />
+            <img class="img-fluid" src="SoMe2.webp" alt="juice" />
           </div>
 
           <div class="col-lg-3 me-3">
             <h2>Let’s stay connected!</h2>
             <h3>
-              Follow us here <img class="stjerner" src="stjerner.png" alt="" />
+              Follow us here <img class="stjerner" src="stjerner.webp" alt="" />
             </h3>
           </div>
         </div>
@@ -383,19 +395,19 @@
       <section id="section5_2" class="row mb-4 text-center align-items-center">
         <div class="row2 mb-5">
           <div class="col-lg-1 ms-3 me-3">
-            <img class="img-fluid" src="SoMe5.png" alt="juice" />
+            <img class="img-fluid" src="SoMe5.webp" alt="juice" />
           </div>
 
           <div class="col-lg-3 me-3 d-none d-lg-block">
-            <img class="img-fluid" src="instabillede.png" alt="juice" />
+            <img class="img-fluid" src="instabillede.webp" alt="juice" />
           </div>
 
           <div class="col-lg-2 me-3 d-none d-lg-block">
-            <img class="img-fluid" src="SoMe6.png" alt="juice" />
+            <img class="img-fluid" src="SoMe6.webp" alt="juice" />
           </div>
 
           <div class="col-lg-1 me-3">
-            <img class="img-fluid" src="SoMe7.png" alt="juice" />
+            <img class="img-fluid" src="SoMe7.webp" alt="juice" />
           </div>
         </div>
       </section>
@@ -452,13 +464,13 @@
             <h5 class="pt-0">Følg os</h5>
             <div class="icons row mb-4">
               <div class="col-4">
-                <img src="instagram.png" alt="" />
+                <img src="instagram.webp" alt="" />
               </div>
               <div class="col-4">
-                <img src="facebook.png" alt="" />
+                <img src="facebook.webp" alt="" />
               </div>
               <div class="col-4">
-                <img src="tiktok.png" alt="" />
+                <img src="tiktok.webp" alt="" />
               </div>
             </div>
           </div>
