--- a/index.html
+++ b/index.html
@@ -8,6 +8,93 @@
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
+    <!— Primary Meta Tags —>
+    <title>Orange Cph — Juice, day and night</title>
+    <meta name="“title”" content="“Orange" Cph — Juice, day and night” />
+    <meta
+      name="“description”"
+      content="“Frisk"
+      frugt,
+      vitaminer
+      og
+      opblanding
+      til
+      cocktails.
+      What’s
+      not
+      to
+      like?
+      Prøv
+      vores
+      forskellige
+      lækre
+      juicevarianter
+      her!”
+    />
+
+    <!— Open Graph / Facebook —>
+    <meta property="“og:type”" content="“website”" />
+    <meta property=“og:url” content=“https://metatags.io/“>
+    <meta property="“og:title”" content="“Orange" Cph — Juice, day and night” />
+    <meta
+      property="“og:description”"
+      content="“Frisk"
+      frugt,
+      vitaminer
+      og
+      opblanding
+      til
+      cocktails.
+      What’s
+      not
+      to
+      like?
+      Prøv
+      vores
+      forskellige
+      lækre
+      juicevarianter
+      her!”
+    />
+    <meta property=“og:image”
+    content=“https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png”>
+
+    <!— Twitter —>
+    <meta property="“twitter:card”" content="“summary_large_image”" />
+    <meta property=“twitter:url” content=“https://metatags.io/“>
+    <meta
+      property="“twitter:title”"
+      content="“Orange"
+      Cph
+      —
+      Juice,
+      day
+      and
+      night”
+    />
+    <meta
+      property="“twitter:description”"
+      content="“Frisk"
+      frugt,
+      vitaminer
+      og
+      opblanding
+      til
+      cocktails.
+      What’s
+      not
+      to
+      like?
+      Prøv
+      vores
+      forskellige
+      lækre
+      juicevarianter
+      her!”
+    />
+    <meta property=“twitter:image”
+    content=“https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png”>
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
